fix copy button position on overflowed single-line blocks

--- a/assets/sass/components/_syntax.scss
+++ b/assets/sass/components/_syntax.scss
@@ -32,7 +32,6 @@ div.highlight {
   overflow-x: scroll;
   margin: 1em 0;
   border: 1px solid;
-  position: relative;
 
   pre {
     padding-left: 1.5em;
@@ -43,24 +42,24 @@ div.highlight {
   > pre > code {
     padding-right: 1.5em;
   }
+}
+
+// elements dynamically added by clipboard.js code
+div.highlight-clipboard-enabled {
+  position: relative;
 
   button.copy-button {
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 2;
+
+    width: 5.25em;
+    padding: 0.75em 0.25em;
+    border: 1px solid;
     cursor: pointer;
 
-    width: 5em;
-    padding: 0.75em 0.25em;
     font-size: 0.9em;
     font-weight: 500;
-
-    background: transparent;
-    border-top: 0;
-    border-right: 0;
-    border-left: 1px solid;
-    border-bottom: 1px solid;
   }
 }
 
